# cdkg-challenge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: deploy.yml
src/kuzu/: .gitignore  00_extract_transcripts.py  01_extract_tag_keywords.py  02_domain_graph.py  03_content_graph.py  Dockerfile  README.md  config.py  docker-compose.yml  docker-entrypoint.sh  entities.json  evaluate.py  rag.py  requirements.txt  streamlit_app.py
src/kuzu/baml_src/: clients.baml  extract_keywords.baml  graphrag.baml
