[project]
name = "kuzu-cdkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kuzu==0.11.3",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "baml-py>=0.220.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "google-genai>=1.66.0",
    "anthropic>=0.84.0",
]
